k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
spec:
  selector:
    app: playground
  ports:
  - port: 8888
    targetPort: 8888
  type: ClusterIP
